# coppelia_ros_pioneer

./: CMakeLists.txt  README.md  package.xml
configuration_files/: demo_pioneer1_2d.rviz  demo_pioneer2_2d.rviz  pioneer1_2d.lua  pioneer2_2d.lua  pioneer_2d.lua
coppelia_scenes/: accelerometer_script.lua  gyro_script.lua  hokuyo_script.lua  imu_script.lua  pioneer_script.lua  ros_pioneer.ttt  ros_pioneer_group_map.ttt  ros_pioneer_plane.ttt
coppelia_scenes/single_robot/: pioneer_p3dx.ttm
coppelia_scenes/two_robots/: accelerometer1_script.lua  accelertometer2_script.lua  gyro1_script.lua  gyro2_script.lua  hokuyo1_script.lua  hokuyo2_script.lua  imu1_script.lua  imu2_script.lua  pioneer1_script.lua  pioneer2_script.lua  pioneer_p3dx_1.ttm  pioneer_p3dx_2.ttm
launch/: odom_ekf.launch  pioneer.launch  pioneer_2d.launch  pioneer_group.launch  pioneer_jhielson.launch  pioneer_map_group.launch  pioneer_turn_and_go.launch  pioneer_turn_and_go_group.launch  pointcloud_to_laserscan.launch  tf_odom_ekf.launch
params/: odom_ekf.yaml
rviz/: config.rviz  rviz.launch  rviz_turn_and_go_single.launch  rviz_turn_and_go_two.launch  turn_and_go_single.rviz
scripts/: move.py  odometry.py  plot_odom.py  turn_and_go.py  wheel_velocity.py
